Fix wrong gap between products

--- a/shop/src/pages/Home/Home.scss
+++ b/shop/src/pages/Home/Home.scss
@@ -8,7 +8,7 @@
     &__products-container {
         display: flex;
         flex-wrap: wrap;
-        justify-content: center;
+        justify-content: space-between;
         column-gap: 40px;
         row-gap: 40px;
     }
